Finish new logging framework