@@ -3,6 +3,7 @@ package lab.proj.model;
 import lab.proj.utils.IndentedDebugPrinter;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -47,7 +48,8 @@ public abstract class Actor implements Entity {
      * @return true if the actor successfully goes through the door, false otherwise.
      */
     public boolean UseDoor(Door d) {
-        Logger.invokeMethod(this, List.of(d));
+        Logger.invokeMethod(this, Collections.singletonList(d));
+
         boolean wasSuccessful = d.GoThrough(location, this);
         if (wasSuccessful) {
             List<Room> rooms = d.GetRooms();
@@ -61,6 +63,7 @@ public abstract class Actor implements Entity {
             prevRoom.StepOut(this);
         }
 
+        Logger.returnValue(wasSuccessful);
         return wasSuccessful;
     }
 
@@ -70,9 +73,12 @@ public abstract class Actor implements Entity {
      * @param i The item to be collected.
      */
     public void CollectItem(Item i) {
-        Logger.invokeMethod(this, List.of(i));
+        Logger.invokeMethod(this, Collections.singletonList(i));
+
         location.RemoveItem(i);
         collectedItems.add(i);
+
+        Logger.returnVoid();
     }
 
     /**
@@ -81,9 +87,11 @@ public abstract class Actor implements Entity {
      * @param i The item to be dropped.
      */
     public void DropItem(Item i) {
-        Logger.invokeMethod(this, List.of(i));
+        Logger.invokeMethod(this, Collections.singletonList(i));
+
         location.AddItem(i);
 
+        Logger.returnVoid();
     }
 
     /**
@@ -92,8 +100,11 @@ public abstract class Actor implements Entity {
      * @param dropOutProtection The drop out protection to be added.
      */
     public void AddDropOutProtection(DropOutProtection dropOutProtection) {
-        Logger.invokeMethod(this, List.of(dropOutProtection));
+        Logger.invokeMethod(this, Collections.singletonList(dropOutProtection));
+
         dropOutProtections.add(dropOutProtection);
+
+        Logger.returnVoid();
     }
 
     /**
@@ -102,8 +113,11 @@ public abstract class Actor implements Entity {
      * @param gasProtection The gas protection to be added.
      */
     public void AddGasProtection(GasProtection gasProtection) {
-        Logger.invokeMethod(this, List.of(gasProtection));
+        Logger.invokeMethod(this, Collections.singletonList(gasProtection));
+
         gasProtections.add(gasProtection);
+
+        Logger.returnVoid();
     }
 
     /**
@@ -113,6 +127,7 @@ public abstract class Actor implements Entity {
      */
     public List<Item> GetItems() {
         Logger.invokeMethod(this, List.of());
+        Logger.returnValue(collectedItems);
         return collectedItems;
     }
 
@@ -123,6 +138,7 @@ public abstract class Actor implements Entity {
      */
     public Room GetLocation() {
         Logger.invokeMethod(this, List.of());
+        Logger.returnValue(location);
         return location;
     }
 
@@ -132,11 +148,11 @@ public abstract class Actor implements Entity {
      * @param r The room to set as the actor's location.
      */
     public void SetLocation(Room r) {
-        Logger.invokeMethod(this, List.of(r));
+        Logger.invokeMethod(this, Collections.singletonList(r));
         location = r;
         r.AddActor(this);
 
-
+        Logger.returnVoid();
     }
 
     /**
@@ -163,6 +179,7 @@ public abstract class Actor implements Entity {
      */
     public boolean IsBlocked() {
         Logger.invokeMethod(this, List.of());
+        Logger.returnValue(incapacitated);
         return incapacitated;
     }
 }
